--- a/content/Linux/常用命令笔记.md
+++ b/content/Linux/常用命令笔记.md
@@ -151,3 +151,5 @@ ls [选项] [目录]
 # 命令行光标移动
 
 ![](https://wx2.sinaimg.cn/mw690/cfce7b59ly1fnvicbi7haj20nu080t9e.jpg)
+
+注: mac 单词移动 option/alt + 方向键
