--- a/content/MySQL/常用操作.md
+++ b/content/MySQL/常用操作.md
@@ -19,4 +19,6 @@ select * from information_schema.innodb_locks
 
 select * from information_schema.innodb_lock_waits
 
+show full processlist;
+
 ```
